<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05aee7"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Game_Main">

    <TextView
        android:id="@+id/texvHome"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/titleHeight"
        android:layout_marginBottom="15sp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/titleTextSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_marginTop="10sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/about_text"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_marginTop="10sp"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:onClick="onClick"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnNew"
        android:layout_marginTop="10sp"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/new_game_text"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnExit"
        android:layout_marginTop="10sp"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exit_text"

        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="italic" />
</LinearLayout>